# ferrotorch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.md  goal-audit-fix.md  goal.md  justfile
ferrotorch-bert/: Cargo.toml  README.md
ferrotorch-bert/examples/: text_embedding_dump.rs
ferrotorch-bert/src/: attention.rs  config.rs  embeddings.rs  layer.rs  lib.rs  model.rs  safetensors_loader.rs
ferrotorch-bert/tests/: conformance_pretrained_text_embedding.rs
ferrotorch-core/: Cargo.toml  README.md  build.rs
ferrotorch-core/examples/: autograd_dump.rs
ferrotorch-core/src/: bool_tensor.rs  complex_tensor.rs  cpu_pool.rs  creation.rs  device.rs  dispatch.rs  display.rs  dtype.rs  dtype_dispatch.rs  einops.rs  einsum.rs  error.rs  fft.rs  flex_attention.rs  gpu_dispatch.rs  inplace.rs  int_tensor.rs  lib.rs  linalg.rs  masked.rs  meta_propagate.rs  methods.rs  named_tensor.rs  nested.rs  numeric_cast.rs  ops_trait.rs  profiler_hook.rs  pruning.rs  quantize.rs  rng.rs  shape.rs  simd_reduce.rs  sparse.rs  special.rs  storage.rs  stride_tricks.rs  tensor.rs  torch_topk_cpu.rs  vmap.rs
ferrotorch-core/tests/: _probe_23_bf16_add_gpu.rs  _probe_23_bf16_op_sweep.rs  _probe_963_bf16_elementwise_reductions.rs  _probe_966_fftn_axes_planmany.rs  _probe_a1_activations_gpu.rs  _probe_a2_log_softmax_grad.rs  _probe_a3_grad_accum_f64.rs  _probe_b1_avgpool2d_ptx.rs  _probe_b1_batchnorm_forward.rs  _probe_b1_capture_stream.rs  _probe_b1_gelu_tanh_ptx.rs  _probe_b2_cusolver_device_resident.rs  _probe_b3_a1_special_f64.rs  _probe_b3_a2_erfinv_f32.rs  _probe_b3_a3_exp_f64_gpu.rs  _probe_b4_a1_empty_numel.rs  _probe_b4_a2_gelu_none_gpu.rs  _probe_b4_a3_einsum_cluster.rs  _probe_b4_a4_log_softmax_f64_grad.rs  _probe_b5_a1_vector_matmul_gpu.rs  _probe_b5_a2_broadcast_bmm_gpu.rs  _probe_b6_a1_reduce_max_min_gpu.rs  _probe_b6_a2_einsum_extension.rs  _probe_b7_a1_fft_backward_normalization.rs  _probe_b7_a2_irfft_pad_truncate.rs  _probe_b7_a3_hermitian_projection.rs  _probe_b8_a2_flex_attention_f64.rs  _probe_c3_bf16_mixed_prec.rs  _probe_c4_grad_fn_gpu.rs  _probe_dtype_landscape.rs  _probe_final_a2_einsum_repeats.rs  _probe_issue17_bf16_tensor_dispatch.rs  _probe_narrow_gpu.rs  _probe_p2_spmm_cusparse.rs  _probe_p3_sparse_to_dense_from_dense.rs  _probe_p4_nested_to_padded_gpu.rs  _probe_p5_flash_attention_forward.rs  _probe_p6_sparse_matmul_24.rs  _probe_p7_csr_csc_conversions.rs  _probe_p8_packed_nested_sparse_grad.rs  (+338 more)
ferrotorch-diffusion/: Cargo.toml  README.md
ferrotorch-diffusion/examples/: clip_text_encode_dump.rs  sd_pipeline_dump.rs  unet_predict_dump.rs  unet_probe_dump.rs  vae_decode_dump.rs
ferrotorch-diffusion/src/: attention.rs  blocks.rs  clip_text_encoder.rs  config.rs  lib.rs  pipeline.rs  resnet_block_time.rs  safetensors_loader.rs  scheduler.rs  time_embedding.rs  unet.rs  unet_config.rs  vae.rs  vae_encoder.rs
ferrotorch-diffusion/tests/: conformance_pretrained_diffusion.rs  conformance_sd_pipeline.rs
ferrotorch-distributed/: Cargo.toml  README.md
ferrotorch-distributed/src/: async_collective.rs  backend.rs  checkpoint.rs  collective.rs  ddp.rs  device_mesh.rs  dtensor.rs  error.rs  fsdp.rs  gloo_backend.rs  gpu_collective.rs  hybrid_backend.rs  lib.rs  mpi_backend.rs  nccl_backend.rs  nccl_collective.rs  nccl_sys.rs  p2p.rs  pipeline.rs  rpc.rs  sync_batch_norm.rs  ucc_backend.rs
ferrotorch-distributed/tests/: conformance_distributed.rs  conformance_surface_coverage.rs
ferrotorch-gpu/: Cargo.toml  README.md  build.rs
ferrotorch-gpu/src/: allocator.rs  atan2.rs  backend_impl.rs  bf16.rs  blas.rs  bool_kernels.rs  buffer.rs  cast_kernels.rs  conv.rs  copysign.rs  cufft.rs  cumulative_kernels.rs  cusolver.rs  cusparselt.rs  device.rs  diag.rs  distance.rs  error.rs  f16.rs  flash_attention.rs  flip.rs  frequency.rs  gather_int.rs  graph.rs  group_norm.rs  int_kernels.rs  kernels.rs  lib.rs  masked_kernels.rs  median.rs  memory_guard.rs  module_cache.rs  nan_reductions.rs  pool.rs  reduce_arg.rs  repeat_interleave.rs  rng.rs  roll.rs  scatter_gather_kernels.rs  search.rs  (+10 more)
ferrotorch-gpu/tests/: _probe_b1_ptx_jit.rs  _probe_broadcast.rs  _probe_cummax_cummin_f64.rs  bf16_vit_block_e2e.rs  conformance_gpu_backend.rs  conformance_gpu_bf16_elementwise.rs  conformance_gpu_blas_family.rs  conformance_gpu_cat.rs  conformance_gpu_kernels.rs  conformance_gpu_lifecycle.rs  conformance_surface_coverage.rs  crosslink_1830_cumextreme_i64_indices.rs  divergence_add_scaled_fused_reaudit.rs  divergence_add_vec4_correctness_and_ascii_ptx.rs  divergence_addcmul_addcdiv_cuda_resident.rs  divergence_airy_zeta_gpu_f32.rs  divergence_airy_zeta_gpu_reaudit.rs  divergence_any_all_count_nonzero_parity.rs  divergence_argmax_argmin_parity.rs  divergence_autograd_engine_utilities_cuda.rs  divergence_bessel_i_gpu_boundary_audit.rs  divergence_bf16_req7_embedding_gather_to_f32.rs  divergence_blas_req8_into_consumers.rs  divergence_bool_broadcast_reaudit.rs  divergence_cdist_compute_mode.rs  divergence_dim_extrema_reduction_parity.rs  divergence_entr_ndtr_ndtri_f32_edges.rs  divergence_full_reduction_on_device_pass2.rs  divergence_full_reduction_reaudit.rs  divergence_gelu_backward_tanh_correctness.rs  divergence_global_extrema_reduction_parity.rs  divergence_half_reduction_backward_fill_cuda.rs  divergence_index_add_copy_cuda_resident.rs  divergence_indexing_masked_fill_parity_cuda.rs  divergence_logsumexp_cuda_parity.rs  divergence_masked_extremum_cuda_parity.rs  divergence_masked_fill_reaudit.rs  divergence_masked_fill_storage_offset_gpu.rs  divergence_masked_scatter_forward_reaudit.rs  divergence_matmul_nt_linear_fused_1679.rs  (+63 more)
ferrotorch-graph/: Cargo.toml  README.md
ferrotorch-graph/examples/: gcn_inference_dump.rs
ferrotorch-graph/src/: data.rs  gcn.rs  lib.rs  safetensors_loader.rs
ferrotorch-graph/tests/: conformance_gcn_cora.rs  divergence_wave_e_audit.rs
ferrotorch-jit/: Cargo.toml
ferrotorch-jit/examples/: jit_trace_dump.rs
ferrotorch-jit/src/: autotune.rs  (+22 more)
ferrotorch-mps/: Cargo.toml  README.md
ferrotorch-tokenize/: Cargo.toml
ferrotorch-train/: Cargo.toml
(+1162 files in other folders)
