[package]
name = "ferrotorch-core"
description = "Core tensor and autograd engine for ferrotorch — PyTorch in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
# Marker feature that gates the GPU branches of the conformance suite. The
# tests themselves use `#[cfg(feature = "gpu")]` (NOT `#[ignore]`) so that on
# a non-CUDA build the test functions are entirely absent rather than silently
# skipped. The actual GPU backend (cudarc kernels, cuBLAS calls, etc.) is
# wired in via the `[dev-dependencies]` entry on `ferrotorch-gpu` below — that
# is a one-way edge (test-only → ferrotorch-gpu), so it does not create a
# package cycle even though ferrotorch-gpu depends on ferrotorch-core in its
# non-test builds. Cargo deliberately permits dev-dep cycles for this reason.
gpu = []
# Marker feature that gates the P6 cuSPARSELt-only probe
# (`tests/_probe_p6_sparse_matmul_24.rs`). Activating this feature alone
# does NOT enable the cuSPARSELt path in ferrotorch-gpu; pass
# `--features ferrotorch-gpu/cusparselt` (or use `--features cusparselt`
# on the workspace driver crate) to also turn on the live FFI. The
# probe gates on this feature so a default `cargo test --features gpu`
# build still produces a clean test binary.
#
# Marker-only (no inner ref) so `cargo publish` doesn't see a feature
# pointing at a dev-dep — `ferrotorch-gpu` is dev-only here.
cusparselt = []

# Opt-in Intel MKL FFI path for the `mm_raw` family (closes #1538 + #1348).
# When enabled, the f32/f64 branches in `ops::linalg::mm_raw`,
# `mm_raw_bt`, and `mm_raw_at` call Fortran `sgemm_`/`dgemm_` directly
# instead of routing through faer's pure-Rust BLAS. This yields byte-for-
# byte parity with PyTorch's MKL-built CPU matmul; without this feature,
# faer remains the BLAS backend and the matmul-family parity tolerance
# stays at `rtol=1e-4` to absorb the cross-BLAS-implementation f32 ULP
# variance (see `pub const MKL_ENABLED` in `ops::linalg`; the
# parity-sweep runner reads it to switch its `tolerance_for` envelope
# at runtime). Activate via `--features mkl` on this crate or
# `--features ferrotorch-core/mkl` from any downstream consumer.
#
# Linkage strategy (system MKL 2024.x dynamic). The crate's `build.rs`
# emits `cargo:rustc-link-search=$HOME/.local/lib` and
# `cargo:rustc-link-lib=mkl_rt`, plus an `OUT_DIR/libmkl_rt.so` →
# `$HOME/.local/lib/libmkl_rt.so.2` symlink so the bare `-lmkl_rt` flag
# resolves at link-time. The prior `intel-mkl-src` + `cblas-sys` deps
# were dropped: (a) intel-mkl-src links MKL 2020.1 whereas torch's
# MKL link (when present) is 2024.x — the dispatch tables differ and
# 1-5 ULP drift survived even with `MKL_CBWR=COMPATIBLE`, and (b) the
# `cblas_sgemm` row-major wrapper picked different MKL micro-kernels
# than torch's raw `sgemm_` Fortran calls on the same column-major-
# equivalent shapes (root cause of #1538's 1-ULP `mm_raw_at` drift).
# Calling the Fortran symbol directly with torch's exact dispatch
# (operand-swap + dim-swap + lda/ldb-swap pattern) eliminates both
# drift sources. FFI to MKL's Fortran symbols is a leaf primitive
# per goal.md R-CODE-1.
mkl = []

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
ferray-linalg = { workspace = true }
ferray-random = { workspace = true }
ferray-fft = { workspace = true }
ferray-stride-tricks = { workspace = true }
ferray-window = { workspace = true }
ferray-ma = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
rustfft = { workspace = true }
faer = "0.24"
rustc-hash = "2"
tracing = { workspace = true }

# Conformance suite scaffolding (Phase 2.0 — issue #759):
#   * `syn`/`quote` parse the public surface of `src/lib.rs` (and every module
#     it declares) so `tests/conformance_surface_inventory.rs` can write a
#     deterministic `_surface.json`.
#   * `toml` parses `_surface_exclusions.toml`, the strict-gate allow-list.
#   * `serde`/`serde_json` parse the inventory JSON and the Python-generated
#     fixtures in `tests/conformance/fixtures/`.
# All four are already transitive deps elsewhere in the workspace; adding them
# as dev-deps does not pull a new top-level crate.
[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
toml = "1"
serde = { workspace = true }
serde_json = { workspace = true }
# `ferrotorch-gpu` registers the cudarc backend that `tests/conformance_creation.rs`
# uses under `--features gpu` to exercise `.to(Device::Cuda(0))` and read back
# values for parity assertions. Listed as a dev-dep (not optional, not feature-
# gated at the manifest level) because Cargo permits dev-dep cycles: the
# ferrotorch-gpu→ferrotorch-core edge in normal builds is preserved while this
# test-only ferrotorch-core→ferrotorch-gpu edge does not propagate to the
# package graph. The test code is gated on `cfg(feature = "gpu")` so the
# binary contains no GPU references on non-CUDA builds.
ferrotorch-gpu = { workspace = true }

# Phase G.5 autograd backward parity harness — drives torch.autograd
# reference grads against ferrotorch-core's `backward()` for the 25
# canonical-op fixtures pinned at `ferrotorch/autograd-parity-v1`
# (#1171). The example loads + dumps tensors via tiny inline binary
# I/O so it pulls in zero extra deps. Companion files:
#   * `scripts/pin_pretrained_autograd_fixtures.py`
#   * `scripts/verify_autograd_inference.py`
#   * `tests/conformance_autograd_parity.rs` (`#[ignore]`-gated)
[[example]]
name = "autograd_dump"
path = "examples/autograd_dump.rs"
