[package]
name = "ferrotorch-distributed"
description = "Distributed training for ferrotorch — backends, collectives, and DDP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
gpu = ["dep:ferrotorch-gpu"]
nccl = ["gpu", "dep:libc"]
# `gloo-backend` toggles the native-Rust Gloo backend wired in #1132 —
# pure-Rust TCP transport with textbook ring allreduce / tree broadcast /
# ring barrier collectives. No C/C++ FFI: the original #459 skeleton's
# C++-binding plan was redirected to a native implementation per the
# closure-task user directive.
#
# `gloo-native` is a forward-compatible alias retained so downstream
# crates referring to either name continue to resolve to the same code
# path.
gloo-backend = []
gloo-native = ["gloo-backend"]
# Skeleton flags for the remaining backends (replaces closed #459). The
# Gloo skeleton has been replaced by the native impl above; MPI / UCC
# still ship API contracts only (modules always compile); enabling these
# flags is what would turn on the actual FFI binding layers, tracked in
# follow-ups #1133 (mpi) / #1134 (ucc) once a CI host with the
# corresponding C library is available.
mpi-backend = []
ucc-backend = []

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1"
