[package]
name = "ferrotorch-distributed"
description = "Distributed training for ferrotorch — backends, collectives, and DDP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
gpu = ["dep:ferrotorch-gpu"]
nccl = ["gpu", "dep:libc"]
# `gloo-backend` toggles the native-Rust Gloo backend wired in #1132 —
# pure-Rust TCP transport with textbook ring allreduce / tree broadcast /
# ring barrier collectives. No C/C++ FFI: the original #459 skeleton's
# C++-binding plan was redirected to a native implementation per the
# closure-task user directive.
#
# `gloo-native` is a forward-compatible alias retained so downstream
# crates referring to either name continue to resolve to the same code
# path.
gloo-backend = []
gloo-native = ["gloo-backend"]
# Skeleton flag for UCC (replaces closed #459, live in #1134). Module
# always compiles; enabling this flag is what would turn on the actual
# FFI binding layer once a CI host with the corresponding C library is
# available.
ucc-backend = []
# `mpi-backend` was originally a fail-fast skeleton flag awaiting a C-FFI
# binding (Open MPI / MPICH). #1133 replaces that skeleton with a
# **native-Rust** MPI-subset backend that delegates to the `gloo_native`
# primitives (ring allreduce / tree broadcast / ring barrier / full-mesh
# send-recv): the subset of the MPI standard PyTorch's
# `init_process_group(backend="mpi")` actually uses maps 1:1 onto those
# operations. `mpi-native` is the forward-spelling alias that wires in
# the real native impl; `mpi-backend` is retained for source-level
# compatibility and aliases to the same code path. Both enable
# `gloo-backend` because the actual transport / collective primitives
# live in `gloo_native::`.
mpi-native = ["gloo-backend"]
mpi-backend = ["mpi-native"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1"
