[package]
name = "ferrotorch-distributed"
description = "Distributed training for ferrotorch — backends, collectives, and DDP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
gpu = ["dep:ferrotorch-gpu"]
nccl = ["gpu", "dep:libc"]
# `gloo-backend` toggles the native-Rust Gloo backend wired in #1132 —
# pure-Rust TCP transport with textbook ring allreduce / tree broadcast /
# ring barrier collectives. No C/C++ FFI: the original #459 skeleton's
# C++-binding plan was redirected to a native implementation per the
# closure-task user directive.
#
# `gloo-native` is a forward-compatible alias retained so downstream
# crates referring to either name continue to resolve to the same code
# path.
gloo-backend = []
gloo-native = ["gloo-backend"]
# `ucc-backend` was originally a fail-fast skeleton flag awaiting a C-FFI
# binding (UCC C library). #1134 replaces that skeleton with a
# **native-Rust** UCC router that delegates CPU collectives to the
# `gloo_native` primitives (ring allreduce / tree broadcast / ring barrier
# / full-mesh send-recv) and — with `ucc-native-gpu` — routes GPU-tensor
# collectives through the NCCL fast path (#1135). UCC's value is the
# *unified* routing across transports, not a single new transport, so the
# router shape is what closed-task expectations actually drive.
#
# `ucc-native` wires the real native implementation; `ucc-backend` is
# retained as a source-compat alias resolving to the same code path.
# Both enable `gloo-backend` because CPU collectives live in
# `gloo_native::`. `ucc-native-gpu` additionally enables `nccl` to wire
# in the GPU fast path. No `ucc-sys`, no `libucc.so` link — pure-Rust
# replacement for the original "wait on UCC C ABI" plan.
ucc-native = ["gloo-backend"]
ucc-backend = ["ucc-native"]
ucc-native-gpu = ["ucc-native", "nccl"]
# `mpi-backend` was originally a fail-fast skeleton flag awaiting a C-FFI
# binding (Open MPI / MPICH). #1133 replaces that skeleton with a
# **native-Rust** MPI-subset backend that delegates to the `gloo_native`
# primitives (ring allreduce / tree broadcast / ring barrier / full-mesh
# send-recv): the subset of the MPI standard PyTorch's
# `init_process_group(backend="mpi")` actually uses maps 1:1 onto those
# operations. `mpi-native` is the forward-spelling alias that wires in
# the real native impl; `mpi-backend` is retained for source-level
# compatibility and aliases to the same code path. Both enable
# `gloo-backend` because the actual transport / collective primitives
# live in `gloo_native::`.
mpi-native = ["gloo-backend"]
mpi-backend = ["mpi-native"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1"
