[package]
name = "ferrotorch-gpu"
description = "CUDA GPU backend for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
# Opt-in cuSPARSELt support for 2:4 structured sparse matmul on Ampere+
# Tensor Cores. Activating this feature links against `libcusparseLt.so`;
# the ABI subset is hand-authored Rust in `src/cusparselt.rs`, so no
# `bindgen`, header parse, libclang, or C/C++ toolchain is required.
cusparselt = ["cuda"]

[dependencies]
ferrotorch-core = { workspace = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[package.metadata.docs.rs]
features = []
