[package]
name = "ferrotorch-train"
description = "Training loop, metrics, and callbacks for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-optim = { workspace = true }
ferrotorch-data = { workspace = true }
ferrotorch-serialize = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1"
tempfile = { workspace = true }

# Multi-epoch training-trajectory dump binary used by the cross-runtime
# parity harness in `scripts/verify_training_trajectory.py` and the
# `#[ignore]`-gated wrapper test
# `tests/conformance_multi_epoch_training.rs` (#1161).
[[example]]
name = "multi_epoch_train_dump"
path = "examples/multi_epoch_train_dump.rs"
